[metadata]
name = PySeasGame
description = Welcome to PySeas, an open-source project to create an exciting and engaging board game in Python, inspired by the popular game Sea of Thieves! This project is perfect for anyone interested in game development, Python programming, and creative collaboration.
author = Danilo
license = AGPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    Launcher,
    py_version,
    pygame_version
install_requires =
    requests>=2
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.1.0
    tox>=4.4.12
    pytest>=7.3.2
    pytest-cov>=4.0.0
    mypy>=1.4.1

[options.package_data]
PySeasGame = py.typed

[flake8]
max-line-length = 160