[metadata]
name = PySeasGame
description = Welcome to PySeas, an open-source project to create an exciting and engaging board game in Python, inspired by the popular game Sea of Thieves! This project is perfect for anyone interested in game development, Python programming, and creative collaboration.
author = Danilo
license = AGPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Games/Entertainment :: Board Games

[options]
packages =
    launcher,
    py_version,
    pygame_version,
    tests
install_requires =
    requests>=2
python_requires = >=3.12
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.1.0
    tox>=4.4.12
    pytest>=7.3.2
    pytest-cov>=4.0.0
    mypy>=1.4.1

[options.package_data]
PySeasGame = py.typed

[flake8]
max-line-length = 160
